# EngineerControl

./: .gitignore  .gitmodules  Dockerfile  run.sh
.devcontainer/: devcontainer.json
.scripts/: buildAndDeploy.sh  buildContainer.sh  set-remote.sh  ssh-remote.sh  stop.sh  sync-remote.sh
deploy/: RunAll.service  RunAll.sh  startup.sh
deploy/YuHengArm/: YuHengArm.x86_64
deploy/YuHengArm/Data/: ArmData.json  ControllerData.json
deploy/YuHengArm/YuHengArm_Data/: boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
deploy/d1/: Dockerfile  startup.sh
deploy/d2/: Dockerfile  startup.sh
deploy/d2/YuHengArm/YuHengArm_Data/: boot.config  globalgamemanagers  level0  resources.assets  sharedassets0.assets
src/.cache/clangd/index/: CameraParams.h.F116033FD84903D4.idx  MvCameraControl.h.88635C9E8AFDE89D.idx  MvErrorDefine.h.3D5799BFA198C50A.idx  MvISPErrorDefine.h.CA585B760C98CEE2.idx  (+11 more)
src/install/: local_setup.sh  setup.sh
src/log/: latest_build
src/manager/: CMakeLists.txt  package.xml
src/manager/YuHengArm/YuHengArm/Data/: ArmData.json  ControllerData.json
src/manager/YuHengArm/YuHengArm/YuHengArm_Data/: ScriptingAssemblies.json  app.info  globalgamemanagers.assets
src/manager/src/: main.cpp
src/rmcs_bringup/: CMakeLists.txt
src/rmcs_bringup/launch/: manager.launch.py  yuheng.launch.py
src/ros2-hikcamera/src/: image_capturer.cpp
src/visual_exchange/: CMakeLists.txt  package.xml
src/visual_exchange/src/: attitude_algorithm.hpp  ekf.cpp  engineer_viusal_exchange.cpp  pnp_solver.cpp  pnp_solver.hpp
(+17 files in other folders)
